<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_x="0dp"
        android:layout_y="0dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="56dp"
            android:layout_height="31dp"
            android:layout_x="8dp"
            android:layout_y="6dp"
            android:src="@drawable/logotess"
            android:contentDescription="@string/logo_desc" />

        <TextView
            android:id="@+id/Lbempresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_x="90dp"
            android:layout_y="14dp"
            android:text="@string/header_text"
            android:contentDescription="@string/header_text" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="14dp"
            android:layout_y="73dp"
            android:text="@string/introduzca_datos"
            android:contentDescription="@string/introduzca_datos_desc" />

        <TextView
            android:id="@+id/LbTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="94dp"
            android:layout_y="46dp"
            android:scrollHorizontally="false"
            android:text="@string/titulo_comprobar_flecha2"
            android:textStyle="bold"
            android:contentDescription="@string/titulo_desc" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="12dp"
            android:layout_y="230dp"
            android:text="@string/longitud_vano_2"
            android:contentDescription="@string/longitud_vano_2_desc" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="12dp"
            android:layout_y="189dp"
            android:text="@string/longitud_vano_1"
            android:contentDescription="@string/longitud_vano_1_desc" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="12dp"
            android:layout_y="148dp"
            android:text="@string/angulo_grapa_2"
            android:contentDescription="@string/angulo_grapa_2_desc" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="12dp"
            android:layout_y="107dp"
            android:text="@string/angulo_grapa_1"
            android:contentDescription="@string/angulo_grapa_1_desc" />

        <TextView
            android:id="@+id/unidadesAngulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="293dp"
            android:layout_y="107dp"
            android:text="º"   />


        <!-- Updated to use string resources for the error icons -->
        <TextView
            android:id="@+id/txtError1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="320dp"
            android:layout_y="107dp"
            android:text="@string/mensaje_error"
            android:visibility="invisible"
            android:contentDescription="@string/error_icon_desc" />
        <TextView
            android:id="@+id/unidadesAngulo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="293dp"
            android:layout_y="148dp"
            android:text="º"   />
        <TextView
            android:id="@+id/txtError2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="320dp"
            android:layout_y="148dp"
            android:text="@string/mensaje_error"
            android:visibility="invisible"
            android:contentDescription="@string/error_icon_desc" />
        <TextView
            android:id="@+id/unidadesDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="293dp"
            android:layout_y="189dp"
            android:text="m"   />
        <TextView
            android:id="@+id/txtError3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="320dp"
            android:layout_y="189dp"
            android:text="@string/mensaje_error"
            android:visibility="invisible"
            android:contentDescription="@string/error_icon_desc" />
        <TextView
            android:id="@+id/unidadesDistancia1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="293dp"
            android:layout_y="230dp"
            android:text="m"   />
        <TextView
            android:id="@+id/txtError4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="320dp"
            android:layout_y="230dp"
            android:text="@string/mensaje_error"
            android:visibility="invisible"
            android:contentDescription="@string/error_icon_desc" />

        <TextView
            android:id="@+id/txtanguloflechar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="11dp"
            android:layout_y="389dp"
            android:text="@string/angulo_flechar"
            android:contentDescription="@string/angulo_flechar_desc" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="12dp"
            android:layout_y="271dp"
            android:text="@string/flecha_teorica_vano_2"
            android:contentDescription="@string/flecha_teorica_vano_2_desc" />

        <EditText
            android:id="@+id/txtanggrapa2"
            android:layout_width="72dp"
            android:layout_height="35dp"
            android:layout_x="212dp"
            android:layout_y="142dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/angulo_grapa_2_cd"
            android:autofillHints="angle_grip_2" />

        <EditText
            android:id="@+id/txtlonvan1"
            android:layout_width="72dp"
            android:layout_height="35dp"
            android:layout_x="212dp"
            android:layout_y="183dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/longitud_vano_1_cd"
            android:autofillHints="span_length_1" />

        <EditText
            android:id="@+id/txtlonvan2"
            android:layout_width="72dp"
            android:layout_height="35dp"
            android:layout_x="212dp"
            android:layout_y="224dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/longitud_vano_2_cd"
            android:autofillHints="span_length_2" />

        <EditText
            android:id="@+id/txtflechteorvan2"
            android:layout_width="72dp"
            android:layout_height="35dp"
            android:layout_x="212dp"
            android:layout_y="265dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/flecha_teorica_vano_2_cd"
            android:autofillHints="theoretical_arrow" />
        <TextView
            android:id="@+id/unidadesDistancia2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="293dp"
            android:layout_y="271dp"
            android:text="m"   />
        <TextView
            android:id="@+id/txtError5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="320dp"
            android:layout_y="271dp"
            android:text="@string/mensaje_error"
            android:visibility="invisible"
            android:contentDescription="@string/error_icon_desc" />

        <EditText
            android:id="@+id/txtanggrapa1"
            android:layout_width="72dp"
            android:layout_height="35dp"
            android:layout_x="212dp"
            android:layout_y="101dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/angulo_grapa_1_cd"
            android:autofillHints="angle_grip_1" />

        <Button
            android:id="@+id/cmdComprobar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="107dp"
            android:layout_y="319dp"
            android:text="@string/Comprobar"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/comprobar_cd" />

        <Button
            android:id="@+id/cmdVolver"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="251dp"
            android:layout_y="450dp"
            android:text="@string/volver"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/volver_cd" />
        <TextView
            android:id="@+id/unidadesAngulo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="293dp"
            android:layout_y="389dp"
            android:text="º"   />
        <TextView
            android:id="@+id/txtMensajeError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="320dp"
            android:layout_y="389dp"
            android:text="@string/mensaje_error"
            android:visibility="invisible"
            android:contentDescription="@string/mensaje_error_cd" />

        <Button
            android:id="@+id/cmdVaciar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_x="258dp"
            android:layout_y="68dp"
            android:text="@string/Vaciar"
            android:textSize="8sp"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/vaciar_cd" />

        <ImageButton
            android:id="@+id/cmdAyuda"
            android:layout_width="24dp"
            android:layout_height="21dp"
            android:layout_x="59dp"
            android:layout_y="44dp"
            android:src="@drawable/interrogacion"
            android:contentDescription="@string/ayuda_desc" />

        <TextView
            android:id="@+id/tvSelectedUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_units"
            android:layout_x="50dp"
            android:layout_y="450dp"/>

    </AbsoluteLayout>
</AbsoluteLayout>
