<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="64dp"
        android:layout_height="29dp"
        android:layout_x="8dp"
        android:layout_y="6dp"
        android:src="@drawable/logotess" />

    <TextView
        android:id="@+id/Lbempresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_x="90dp"
        android:layout_y="14dp"
        android:text="@string/header_text" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="14dp"
        android:layout_y="73dp"
        android:text="@string/introduzca_datos" />

    <TextView
        android:id="@+id/LbTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="94dp"
        android:layout_y="46dp"
        android:scrollHorizontally="false"
        android:text="@string/button_sag_1span"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="12dp"
        android:layout_y="249dp"
        android:text="@string/flecha_teorica" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="12dp"
        android:layout_y="203dp"
        android:text="@string/longitud_vano" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="12dp"
        android:layout_y="155dp"
        android:text="@string/angulo_en_grapa" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="12dp"
        android:layout_y="107dp"
        android:text="@string/distancia_taquimetro" />

    <EditText
        android:id="@+id/txtDistancia"
        android:layout_width="72dp"
        android:layout_height="35dp"
        android:layout_x="209dp"
        android:layout_y="101dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/txtanggrapa"
        android:layout_width="72dp"
        android:layout_height="35dp"
        android:layout_x="209dp"
        android:layout_y="149dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/txtlongvano"
        android:layout_width="72dp"
        android:layout_height="35dp"
        android:layout_x="209dp"
        android:layout_y="197dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="10dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtflechteor"
        android:layout_width="72dp"
        android:layout_height="35dp"
        android:layout_x="209dp"
        android:layout_y="243dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="10dp" />

    <Button
        android:id="@+id/cmdComprobar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="109dp"
        android:layout_y="308dp"
        android:text="@string/Comprobar" />

    <TextView
        android:id="@+id/txtanguloflechar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="377dp"
        android:text="@string/angulo_flechar" />

    <TextView
        android:id="@+id/unidadesDistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="293dp"
        android:layout_y="107dp"
        android:text="m"   />

    <TextView
        android:id="@+id/txterror1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="320dp"
        android:layout_y="107dp"
        android:text="@string/mensaje_error"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/unidadesAngulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="293dp"
        android:layout_y="153dp"
        android:text="º"   />

    <TextView
        android:id="@+id/txterror2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="320dp"
        android:layout_y="153dp"
        android:text="@string/mensaje_error"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/unidadesDistancia1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="293dp"
        android:layout_y="202dp"
        android:text="m"   />

    <TextView
        android:id="@+id/txterror3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="320dp"
        android:layout_y="202dp"
        android:text="@string/mensaje_error"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/unidadesDistancia2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="293dp"
        android:layout_y="247dp"
        android:text="m"   />

    <TextView
        android:id="@+id/txterror4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="320dp"
        android:layout_y="247dp"
        android:text="@string/mensaje_error"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/unidadesAngulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="293dp"
        android:layout_y="377dp"
        android:text="º"   />

    <TextView
        android:id="@+id/txtMensajeError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="252dp"
        android:layout_y="377dp"
        android:text="@string/mensaje_error"
        android:visibility="invisible" />

    <Button
        android:id="@+id/cmdVolver"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="248dp"
        android:layout_y="450dp"
        android:text="@string/volver" />

    <Button
        android:id="@+id/cmdVaciar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_x="258dp"
        android:layout_y="66dp"
        android:text="@string/Vaciar"
        android:textSize="8dp" />

    <ImageButton
        android:id="@+id/cmdAyuda"
        android:layout_width="24dp"
        android:layout_height="21dp"
        android:layout_x="58dp"
        android:layout_y="44dp"
        android:src="@drawable/interrogacion" />

    <TextView
        android:id="@+id/tvSelectedUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_units"
        android:layout_x="50dp"
        android:layout_y="450dp"/>
</AbsoluteLayout>
